--- a/libkt/build.gradle
+++ b/libkt/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
     api 'com.google.code.gson:gson:2.8.5'
     api 'androidx.core:core-ktx:1.1.0-alpha04'
